test/expected/declare_+o_eq_rck_rk=default-c++03.out
struct S; declare = of structure S as default member operator (reference to ...
         ^
10: error: "default" is illegal for operator until C++11
